--- a/FunWeb/WebContent/index.html
+++ b/FunWeb/WebContent/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <script>
-location.href="main/main.jsp";
+  location.href="main/main.jsp";
 </script>
+  <h1>index.html</h1>
 </body>
 </html>
